force-app/main/default/objects/Product_Information__mdt/Product_Information__mdt.object-meta.xml
<CustomObject>
    <label>Product Information</label>
    <pluralLabel>Product Information</pluralLabel>
</CustomObject>