force-app/main/default/objects/Product_Information__mdt/fields/ATM_Fee__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee__c</fullName>
    <label>ATM Fee</label>
    <type>Text</type>
    <length>50</length>
</CustomField>