force-app/main/default/objects/Product_Information__mdt/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <label>Card Replacement Cost</label>
    <type>Text</type>
    <length>50</length>
</CustomField>