force-app/main/default/objects/Product_Information__mdt/fields/Cost_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Month__c</fullName>
    <label>Cost Per Month</label>
    <type>Text</type>
    <length>50</length>
</CustomField>