force-app/main/default/objects/Product_Information__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Text</type>
    <length>10</length>
</CustomField>