force-app/main/default/objects/Product_Information__mdt/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>